SecGrp.tf
# create security group with 4 rules. 2 Ingress(inbound) and 2 egress(outbound rules)
resource "aws_security_group" "bla" {
  name        = "bla"
  description = "bla"
  tags = {
    Name = "bla"
  }
}

# allow ssh from my IP
resource "aws_vpc_security_group_ingress_rule" "sshfromIP" {
  security_group_id = aws_security_group.bla.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 22
  ip_protocol       = "tcp"
  to_port           = 22
}

# allow http from anywhere
resource "aws_vpc_security_group_ingress_rule" "allow_http" {
  security_group_id = aws_security_group.bla.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  to_port           = 80
}

# allow outbound traffic from ipv4
resource "aws_vpc_security_group_egress_rule" "allowAllOutbound_ipv4" {
  security_group_id = aws_security_group.bla.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1" # semantically equivalent to all ports
}

# allow outbound traffic from ipv6
resource "aws_vpc_security_group_egress_rule" "allowAllOutbound_ipv6" {
  security_group_id = aws_security_group.bla.id
  cidr_ipv6         = "::/0"
  ip_protocol       = "-1" # semantically equivalent to all ports
}
